--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#server.port=9000
+
+# db settings
 spring.application.name=jobportal
 spring.datasource.url=jdbc:mysql://localhost:3306/job_portal
 spring.datasource.username=root
